<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="#718093"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SonucActivity">

    <ScrollView
        android:layout_weight="10"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">
    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/str_cevapSayisi"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/text_cevapSayisi"
            android:text=" 100"
            android:textColor="#55FA0E"
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/str_dogruSayisi"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/text_dogruSayisi"
            android:text=" 100"
            android:textColor="#55FA0E"
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/str_yanlisSayisi"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/text_yanlisSayisi"
            android:text=" 100"
            android:textColor="#F1071B"
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/str_basariYuzdesi"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/text_oran"
            android:text=" %100"
            android:textColor="#47FA07"
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>

    <Button
        android:layout_gravity="center"
        android:id="@+id/btn_ana_sayfa"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/str_anaSayfa"
        android:backgroundTint="#A32323">
    </Button>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_dogruCevaplar"
                android:text="@string/str_dogruCevaplar"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

            </TextView>

            <TextView
                android:id="@+id/text_yanlisCevaplar"
                android:text="@string/str_yanlisCevaplar"
                android:gravity="right"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

            </TextView>

        </LinearLayout>
    </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="50dp">

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:gravity="bottom"
            android:id="@+id/banner_unity"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal" />
    </RelativeLayout>

</LinearLayout>