<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#718093"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".infoSayfa">

    <TextView
        android:layout_weight="4"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/str_hakkinda"
        android:textSize="30dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <TextView
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_weight="6"
        android:gravity="center|top"
        android:text="@string/str_info"
        android:textSize="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_weight="3"
        android:gravity="center|top"
        android:text="By Begers"
        android:textSize="30dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <Button
        android:id="@+id/btn_set_geri"
        android:backgroundTint="#B52D2D"
        android:layout_gravity="center"
        android:text="@string/str_geri"
        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="50dp">

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:gravity="bottom"
            android:id="@+id/banner_unity_info"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal" />
    </RelativeLayout>

</LinearLayout>